<resources>
    <string name="app_name">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_location_detected">Error: No Location Detected</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_weathermodel1">Australian Apparent Temperature</string>
    <string name="pref_weathermodel1_summary" />
    <string name="pref_weathermodel2">Wind Chill Temperature</string>
    <string name="pref_weathermodel2_summary" />
    <string name="pref_apikey">Forecast.io API Key</string>
    <string name="pref_apikey_summary">Enter your Forecast.io API key here (for testing)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_notifications">Weather Alerts</string>
    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>
